# whisper-tflite-converter

./: .gitignore  LICENSE  README.md  gen_model.py  pyproject.toml  requirements.txt
