[project]
name = "whisper-tflite-converter"
version = "0.1.0"
description = "A tool to convert Whisper models from Hugging Face Transformers to TensorFlow Lite format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.1.1",
    "soundfile>=0.13.1",
    "tensorflow==2.14.1",
    "tf-keras>=2.15.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.7.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
